# unicode-to-png

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPORTE_ANALISIS_REPO.md  SECURITY.md  pyproject.toml  unicode_to_png.py
.github/: FUNDING.yml  LABELS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  bug_report.yml  config.yml  documentation.yml  edge_case.yml  feature_request.md  feature_request.yml  hotfix.md  investigation.yml  performance_stability.yml  release_checklist.md
.github/workflows/: codeql.yml  windows-tests.yml
docs/: CHANGELOG_TEMPLATE.md  USAGE.md
scripts/: sync_github_labels.py
tests/: test_cli.py  test_core_utils.py
unicode_to_png/: __init__.py  batch_utils.py  logging_utils.py  path_utils.py  unicode_utils.py  version.py
